fix warnings.